--- a/data_acknowledgement.html
+++ b/data_acknowledgement.html
@@ -2,19 +2,19 @@
 	<html lang="zxx" class="no-js">
 	<head>
 		<!-- Mobile Specific Meta -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<!-- Favicon-->
-		<link rel="shortcut icon" href="img/fav.png">
-		<!-- Author Meta -->
-		<meta name="author" content="colorlib">
-		<!-- Meta Description -->
-		<meta name="description" content="">
-		<!-- Meta Keyword -->
-		<meta name="keywords" content="">
-		<!-- meta character set -->
-		<meta charset="UTF-8">
-		<!-- Site Title -->
-		<title>Education</title>
+            <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+            <!-- Favicon-->
+            <link rel="shortcut icon" href="img/logo.jpg">
+            <!-- Author Meta -->
+            <meta name="kmnp" content="">
+            <!-- Meta Description -->
+            <meta name="Fashionpedia project website" content="">
+            <!-- Meta Keyword -->
+            <meta name="keywords" content="">
+            <!-- meta character set -->
+            <meta charset="UTF-8">
+            <!-- Site Title -->
+            <title>Fashionpedia</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 			<!--
