--- a/data_license.html
+++ b/data_license.html
@@ -4,17 +4,17 @@
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Favicon-->
-		<link rel="shortcut icon" href="img/fav.png">
+		<link rel="shortcut icon" href="img/logo.jpg">
 		<!-- Author Meta -->
-		<meta name="author" content="colorlib">
+		<meta name="kmnp" content="">
 		<!-- Meta Description -->
-		<meta name="description" content="">
+		<meta name="Fashionpedia project website" content="">
 		<!-- Meta Keyword -->
 		<meta name="keywords" content="">
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>Education</title>
+		<title>Fashionpedia</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 			<!--
