--- a/data_acknowledgement.html
+++ b/data_acknowledgement.html
@@ -4,7 +4,7 @@
 		<!-- Mobile Specific Meta -->
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
             <!-- Favicon-->
-            <link rel="shortcut icon" href="img/logo.jpg">
+            <link rel="shortcut icon" href="img/logo.png">
             <!-- Author Meta -->
             <meta name="kmnp" content="">
             <!-- Meta Description -->
