added baseline predicto link

--- a/data.html
+++ b/data.html
@@ -136,18 +136,24 @@
 				<div class="container">
 					<h3 class="text-heading">Download</h3>
 					<p class="sample-text">
-						<b>JSON format</b>: CVDF hosts the images and annotations in the Fashionpedia dataset.
+						<b>Tools and model</b>
 					</p>
-
 					<div class="button-group-area mt-10 mb-40">
 						<a href="https://github.com/KMnP/fashionpedia-api" class="genric-btn primary-border circle arrow">Tools (Fashionpedia API)<span class="lnr lnr-arrow-right"></span></a>
-						<a href="https://github.com/cvdfoundation/fashionpedia#images" class="genric-btn primary-border circle arrow">Images<span class="lnr lnr-arrow-right"></span></a>
-						<a href="https://github.com/cvdfoundation/fashionpedia#annotations" class="genric-btn primary-border circle arrow">Annotations<span class="lnr lnr-arrow-right"></span></a>
+						<a href="https://github.com/KMnP/fashionpedia-api/blob/master/baseline_predictor_demo.ipynb" class="genric-btn primary-border circle arrow">Baseline model<span class="lnr lnr-arrow-right"></span></a>
 					</div>
-					<p class="sample-text">
-						<b style="color:#4cd3e3;">csv format in Kaggle</b>: annotations are in csv form at Kaggle platform
-					</p>
 
+					<p class="sample-text">
+						<b style="color:#38a4ff;">Data in JSON format</b>: CVDF hosts the images and annotations in the Fashionpedia dataset.
+					</p>
+					<div class="button-group-area mt-10 mb-40">
+						<a href="https://github.com/cvdfoundation/fashionpedia#images" class="genric-btn info-border circle arrow">Images<span class="lnr lnr-arrow-right"></span></a>
+						<a href="https://github.com/cvdfoundation/fashionpedia#annotations" class="genric-btn info-border circle arrow">Annotations<span class="lnr lnr-arrow-right"></span></a>
+					</div>
+
+					<p class="sample-text">
+						<b style="color:#4cd3e3;">Data in csv format (Kaggle)</b>: annotations are in csv form at Kaggle platform
+					</p>
 					<div class="button-group-area mt-10 mb-40">
 						<a href="https://www.kaggle.com/c/imaterialist-fashion-2020-fgvc7" class="genric-btn success-border circle arrow">Kaggle site<span class="lnr lnr-arrow-right"></span></a>
 						<a href="https://www.kaggle.com/c/imaterialist-fashion-2020-fgvc7/data" class="genric-btn success-border circle arrow">Images & Annotations<span class="lnr lnr-arrow-right"></span></a>
