--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 							<p class="meta"></p>
 							<a>
 								<h5>Fashionpedia API</h5>
-								<p>A tool to read and visualize data, and to evaluate detection related results.</p>
+								<p>A tool to read and visualize data, and to evaluate detection related results. A baseline model (Attribute Mask-RCNN) with predictor demo is also provided.</p>
 							</a>
 						<a href="https://github.com/KMnP/fashionpedia-api" class="details-btn d-flex justify-content-center align-items-center"><span class="details">Details</span><span class="lnr lnr-arrow-right"></span></a>
 						</div>
