added api and paper landing pages

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Home</a></li>
-			          <li><a href="https://arxiv.org/abs/2004.12276">Paper</a></li>
+			          <li><a href="papers.html">Papers</a></li>
 			          <li class="menu-has-children"><a href="data.html">Fashionpedia Dataset</a>
 			            <ul>
 			              <li><a href="data.html">Overview</a></li>
@@ -49,7 +49,7 @@
 			              <li><a href="data_acknowledgement.html">Acknowledgement</a></li>
 			            </ul>
 			          </li>
-			          <li><a href="https://github.com/KMnP/fashionpedia-api">Fashionpedia API</a></li>
+			          <li><a href="Model_and_API.html">Fashionpedia API</a></li>
 			          <li class="menu-has-children"><a href="research_leaderboard.html">Leaderboard</a>
 			            <ul>
 			              <li><a href="research_leaderboard.html">Leaderboard</a></li>
