--- a/data.html
+++ b/data.html
@@ -40,7 +40,7 @@
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Home</a></li>
-			          <li><a href="https://arxiv.org/abs/2004.12276">Paper</a></li>
+			          <li><a href="papers.html">Papers</a></li>
 			          <li class="menu-has-children"><a href="data.html">Fashionpedia Dataset</a>
 			            <ul>
 			              <li><a href="data.html">Overview</a></li>
@@ -49,7 +49,7 @@
 			              <li><a href="data_acknowledgement.html">Acknowledgement</a></li>
 			            </ul>
 			          </li>
-			          <li><a href="https://github.com/KMnP/fashionpedia-api">Fashionpedia API</a></li>
+			          <li><a href="Model_and_API.html">Fashionpedia API</a></li>
 			          <li class="menu-has-children"><a href="research_leaderboard.html">Leaderboard</a>
 			            <ul>
 			              <li><a href="research_leaderboard.html">Leaderboard</a></li>
@@ -105,7 +105,7 @@
 
 			<div class="section-tasks">
 				<div class="container">
-				<h3 class="mb-30">Tasks</h3>
+				<h2 class="mb-30">Tasks</h2>
 				<div class="row">
 					<div class="col-md-6">
 						<!-- <div class="col-lg-8 col-md-8"> -->
@@ -114,9 +114,9 @@
 							<p>Apparel object detection (bounding boxes or segmentation masks) with localized attributes prediction. One can also use the same set of annotation for apparel object detection task.</p>
 						</div>
                         <div class="button-group-area mb-30">
-							<a href="https://github.com/cvdfoundation/fashionpedia#annotation-format" class="genric-btn info-border circle">Annotation formats</a>
-							<a href="https://github.com/KMnP/fashionpedia-api#evaluation" class="genric-btn info-border circle">Evaluation</a>
-							<a href="https://github.com/KMnP/fashionpedia-api#result-format" class="genric-btn info-border circle">Results formats</a>
+							<a href="https://github.com/cvdfoundation/fashionpedia#annotation-format" class="genric-btn success large circle">Annotation formats</a>
+							<a href="https://github.com/KMnP/fashionpedia-api#evaluation" class="genric-btn success large circle">Evaluation</a>
+							<a href="https://github.com/KMnP/fashionpedia-api#result-format" class="genric-btn success large circle">Results formats</a>
 						</div>
 					</div>
 					<div class="col-md-6">
@@ -125,7 +125,7 @@
 							<p>One can also merge attributes among all masks as global attributes and evaluate the attribute prediction.</p>
 						</div>
 						<div class="button-group-area mb-30">
-							<a href="https://github.com/cvdfoundation/fashionpedia#global-attribute-prediction-task-attributes" class="genric-btn info-border circle">Annotation formats</a>
+							<a href="https://github.com/cvdfoundation/fashionpedia#global-attribute-prediction-task-attributes" class="genric-btn success large circle">Annotation formats</a>
 						</div>
 					</div>
 				</div></div>
@@ -134,29 +134,31 @@
 
             <section class="sample-text-area">
 				<div class="container">
-					<h3 class="text-heading">Download</h3>
-					<p class="sample-text">
+					<h2 class="mb-40">Download</h2>
+					<h3 class="sample-text">
 						<b>Tools and model</b>
-					</p>
+					</h3>
 					<div class="button-group-area mt-10 mb-40">
-						<a href="https://github.com/KMnP/fashionpedia-api" class="genric-btn primary-border circle arrow">Tools (Fashionpedia API)<span class="lnr lnr-arrow-right"></span></a>
-						<a href="https://github.com/KMnP/fashionpedia-api/blob/master/baseline_predictor_demo.ipynb" class="genric-btn primary-border circle arrow">Baseline model<span class="lnr lnr-arrow-right"></span></a>
+						<a href="https://github.com/KMnP/fashionpedia-api" class="genric-btn primary large circle arrow">Tools (Fashionpedia API)<span class="lnr lnr-arrow-right"></span></a>
+						<a href="https://github.com/KMnP/fashionpedia-api/blob/master/baseline_predictor_demo.ipynb" class="genric-btn primary large circle arrow">Baseline model<span class="lnr lnr-arrow-right"></span></a>
 					</div>
 
-					<p class="sample-text">
-						<b style="color:#38a4ff;">Data in JSON format</b>: CVDF hosts the images and annotations in the Fashionpedia dataset.
-					</p>
+					<h3 class="sample-text">
+						<b style="color:#38a4ff;">Data in JSON format</b>
+					</h3>
+					<p class="mt-20">CVDF hosts the images and annotations in the Fashionpedia dataset.</p>
 					<div class="button-group-area mt-10 mb-40">
-						<a href="https://github.com/cvdfoundation/fashionpedia#images" class="genric-btn info-border circle arrow">Images<span class="lnr lnr-arrow-right"></span></a>
-						<a href="https://github.com/cvdfoundation/fashionpedia#annotations" class="genric-btn info-border circle arrow">Annotations<span class="lnr lnr-arrow-right"></span></a>
+						<a href="https://github.com/cvdfoundation/fashionpedia#images" class="genric-btn info large circle arrow">Images<span class="lnr lnr-arrow-right"></span></a>
+						<a href="https://github.com/cvdfoundation/fashionpedia#annotations" class="genric-btn info large circle arrow">Annotations<span class="lnr lnr-arrow-right"></span></a>
 					</div>
 
-					<p class="sample-text">
-						<b style="color:#4cd3e3;">Data in csv format (Kaggle)</b>: annotations are in csv form at Kaggle platform
-					</p>
+					<h3 class="sample-text">
+						<b style="color:#4cd3e3;">Data in csv format (Kaggle)</b>
+					</h3>
+					<p class="mt-20">Annotations are in csv form at Kaggle platform</p>
 					<div class="button-group-area mt-10 mb-40">
-						<a href="https://www.kaggle.com/c/imaterialist-fashion-2020-fgvc7" class="genric-btn success-border circle arrow">Kaggle site<span class="lnr lnr-arrow-right"></span></a>
-						<a href="https://www.kaggle.com/c/imaterialist-fashion-2020-fgvc7/data" class="genric-btn success-border circle arrow">Images & Annotations<span class="lnr lnr-arrow-right"></span></a>
+						<a href="https://www.kaggle.com/c/imaterialist-fashion-2020-fgvc7" class="genric-btn success large circle arrow">Kaggle site<span class="lnr lnr-arrow-right"></span></a>
+						<a href="https://www.kaggle.com/c/imaterialist-fashion-2020-fgvc7/data" class="genric-btn success large circle arrow">Images & Annotations<span class="lnr lnr-arrow-right"></span></a>
 					</div>
 				</div>
 			</section>
