--- a/data_acknowledgement.html
+++ b/data_acknowledgement.html
@@ -31,42 +31,42 @@
 			<link rel="stylesheet" href="css/main.css">
 		</head>
 		<body>
-		  <header id="header" id="home">
-                  <div class="header-top">
-                        </div>
-                  </div>
-                <div class="container main-menu">
-                  <div class="row align-items-center justify-content-between d-flex">
-                        <nav id="nav-menu-container">
-                          <ul class="nav-menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="https://arxiv.org/abs/2004.12276">Paper</a></li>
-                            <li class="menu-has-children"><a href="data.html">Fashionpedia Dataset</a>
-                              <ul>
-                                <li><a href="data.html">Overview</a></li>
-                                <li><a href="https://github.com/cvdfoundation/fashionpedia">Download</a></li>
-                                <li><a href="data_license.html">Terms of Use</a></li>
-                                <li><a href="data_acknowledgement.html">Acknowledgement</a></li>
-                              </ul>
-                            </li>
-                            <li><a href="https://github.com/KMnP/fashionpedia-api">Fashionpedia API</a></li>
-                            <li class="menu-has-children"><a href="research_leaderboard.html">Leaderboard</a>
-                              <ul>
-                                <li><a href="research_leaderboard.html">Leaderboard</a></li>
-                                <li><a href="kaggle_sites.html">iMat-Fashion (FGVC)</a></li>
-                              </ul>
-                            </li>
-                            <li class="menu-has-children"><a href="idesigner.html">Other Datasets</a>
-                              <ul>
-                                <li><a href="idesigner.html">Hearst dataset</a></li>
-                              </ul>
-                            </li>
-                            <li><a href="contact.html">Contact</a></li>
-                          </ul>
-                        </nav><!-- #nav-menu-container -->
-                  </div>
+          <header id="header" id="home">
+            <div class="header-top">
                 </div>
-              </header><!-- #header -->
+            </div>
+            <div class="container main-menu">
+                <div class="row align-items-center justify-content-between d-flex">
+                  <nav id="nav-menu-container">
+                    <ul class="nav-menu">
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="papers.html">Papers</a></li>
+                      <li class="menu-has-children"><a href="data.html">Fashionpedia Dataset</a>
+                        <ul>
+                          <li><a href="data.html">Overview</a></li>
+                          <li><a href="https://github.com/cvdfoundation/fashionpedia">Download</a></li>
+                          <li><a href="data_license.html">Terms of Use</a></li>
+                          <li><a href="data_acknowledgement.html">Acknowledgement</a></li>
+                        </ul>
+                      </li>
+                      <li><a href="Model_and_API.html">Fashionpedia API</a></li>
+                      <li class="menu-has-children"><a href="research_leaderboard.html">Leaderboard</a>
+                        <ul>
+                          <li><a href="research_leaderboard.html">Leaderboard</a></li>
+                          <li><a href="kaggle_sites.html">iMat-Fashion (FGVC)</a></li>
+                        </ul>
+                      </li>
+                      <li class="menu-has-children"><a href="idesigner.html">Other Datasets</a>
+                        <ul>
+                          <li><a href="idesigner.html">Hearst dataset</a></li>
+                        </ul>
+                      </li>
+                      <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                  </nav><!-- #nav-menu-container -->
+                </div>
+            </div>
+          </header><!-- #header -->
 
 			<!-- start banner Area -->
 			<section class="banner-area relative about-banner" id="home">
