--- a/data_license.html
+++ b/data_license.html
@@ -40,7 +40,7 @@
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Home</a></li>
-			          <li><a href="https://arxiv.org/abs/2004.12276">Paper</a></li>
+			          <li><a href="papers.html">Papers</a></li>
 			          <li class="menu-has-children"><a href="data.html">Fashionpedia Dataset</a>
 			            <ul>
 			              <li><a href="data.html">Overview</a></li>
@@ -49,7 +49,7 @@
 			              <li><a href="data_acknowledgement.html">Acknowledgement</a></li>
 			            </ul>
 			          </li>
-			          <li><a href="https://github.com/KMnP/fashionpedia-api">Fashionpedia API</a></li>
+			          <li><a href="Model_and_API.html">Fashionpedia API</a></li>
 			          <li class="menu-has-children"><a href="research_leaderboard.html">Leaderboard</a>
 			            <ul>
 			              <li><a href="research_leaderboard.html">Leaderboard</a></li>
@@ -86,12 +86,12 @@
 			<!-- Start Sample Area -->
 			<section class="sample-text-area">
 				<div class="container">
-					<h3 class="text-heading">Annotations, ontology and websites</h3>
+					<h2 class="text-heading">Annotations, ontology and websites</h2>
 					<p class="sample-text mb-40" >
 						The annotations in the Fashionpedia dataset along with the ontology, and the websites belong to the Fashionpadia and are licensed under a <u><a href="https://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution 4.0 License</a></u>.
 					</p>
 
-					<h3 class="text-heading mt-40">Software</h3>
+					<h2 class="text-heading mt-40">Software</h2>
 					<p class="sample-text mb-40">
 						Copyright (c) 2020, Fashionpedia Consortium. All rights reserved.
 Redistribution and use in source and binary forms, with or without
@@ -115,7 +115,7 @@ ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 					</p>
 
-					<h3 class="text-heading mt-40">Images</h3>
+					<h2 class="text-heading mt-40">Images</h2>
 					<p class="sample-text mb-40">
 						The Fashionpedia does not own the copyright of the images. Use of the images must abide by the Terms of use of  <u><a href="https://policies.oath.com/us/en/oath/terms/otos/index.html">Flickr</a></u>, <u><a href="https://unsplash.com/license">Unsplash</a></u>, <u><a href="https://burst.shopify.com/legal/terms">Burst by Shopify</a></u>, <u><a href="https://freestocks.org/terms-of-use/">Freestocks</a></u>, <u><a href="https://kaboompics.com/page/license-and-faq">Kaboompics</a></u>, and <u><a href="https://www.pexels.com/photo-license/">Pexels</a></u>. The users of the Fashionpedia accept full responsibility for the use of the Fashionpedia dataset, including but not limited to the use of any copies of copyrighted images that they may create from the Fashionpedia.</p>
 				</div>
