--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Home</a></li>
-			          <li><a href="https://arxiv.org/abs/2004.12276">Paper</a></li>
+			          <li><a href="papers.html">Papers</a></li>
 			          <li class="menu-has-children"><a href="data.html">Fashionpedia Dataset</a>
 			            <ul>
 			              <li><a href="data.html">Overview</a></li>
@@ -49,7 +49,7 @@
 			              <li><a href="data_acknowledgement.html">Acknowledgement</a></li>
 			            </ul>
 			          </li>
-			          <li><a href="https://github.com/KMnP/fashionpedia-api">Fashionpedia API</a></li>
+			          <li><a href="Model_and_API.html">Fashionpedia API</a></li>
 			          <li class="menu-has-children"><a href="research_leaderboard.html">Leaderboard</a>
 			            <ul>
 			              <li><a href="research_leaderboard.html">Leaderboard</a></li>
@@ -162,9 +162,9 @@
 					</div>
 					<div class="row">
 						<div class="col-lg-3 col-md-6 single-blog">
-							<div class="thumb">
+							<div class="thumb"><a href="papers.html" >
 								<img class="img-thumbnail" src="img/dataset/paper.png" alt="">
-							</div>
+							</a></div>
 							<p class="meta"></p>
 							<a>
 								<h5>Paper</h5>
@@ -177,12 +177,13 @@
 								<li>Dataset analysis</li>
 								<li>Evaluation protocol and baseline model (Attribute-Mask RCNN)</li>
 							</a>
-                        <a href="https://arxiv.org/abs/2004.12276" class="details-btn d-flex justify-content-center align-items-center"><span class="details">Details</span><span class="lnr lnr-arrow-right"></span></a>
+                        <a href="papers.html" class="details-btn d-flex justify-content-center align-items-center"><span class="details">Details</span><span class="lnr lnr-arrow-right"></span></a>
 						</div>
+
 						<div class="col-lg-3 col-md-6 single-blog">
-							<div class="thumb">
+							<div class="thumb"><a href="data.html">
 								<img class="img-thumbnail" src="img/dataset/more_examples.png" alt="">
-							</div>
+							</a></div>
 							<p class="meta"></p>
 							<a>
 								<h5>Dataset</h5>
@@ -190,21 +191,23 @@
 							</a>
 						<a href="data.html" class="details-btn d-flex justify-content-center align-items-center"><span class="details">Details</span><span class="lnr lnr-arrow-right"></span></a>
 						</div>
+
 						<div class="col-lg-3 col-md-6 single-blog">
-							<div class="thumb">
+							<div class="thumb"><a href="Model_and_API.html">
 								<img class="img-thumbnail" src="img/dataset/api.jpeg" alt="">
-							</div>
+							</a></div>
 							<p class="meta"></p>
 							<a>
 								<h5>Fashionpedia API</h5>
 								<p>A tool to read and visualize data, and to evaluate detection related results. A baseline model (Attribute Mask-RCNN) with predictor demo is also provided.</p>
 							</a>
-						<a href="https://github.com/KMnP/fashionpedia-api" class="details-btn d-flex justify-content-center align-items-center"><span class="details">Details</span><span class="lnr lnr-arrow-right"></span></a>
+						<a href="Model_and_API.html" class="details-btn d-flex justify-content-center align-items-center"><span class="details">Details</span><span class="lnr lnr-arrow-right"></span></a>
 						</div>
+
 						<div class="col-lg-3 col-md-6 single-blog">
-							<div class="thumb">
+							<div class="thumb"><a href="research_leaderboard.html">
 								<img class="img-thumbnail" src="img/dataset/leaderboard.jpeg" alt="">
-							</div>
+							</a></div>
 							<p class="meta"></p>
 							<a>
 								<h5>Leaderboards</h5>
