--- a/Model_and_API.html
+++ b/Model_and_API.html
@@ -75,60 +75,49 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								Leaderboard (Under construction)
+								Fashionpedia API & baseline model
 							</h1>
 						</div>
 					</div>
 				</div>
 			</section>
 			<!-- End banner Area -->
+
             <section class="sample-text-area">
 				<div class="container">
-					<h3 class="text-heading">Submit to the leaderboard</h3>
+					<h2 class="text-heading">Fashionpedia API</h2>
 					<p class="sample-text">
-						Want to submit to the leaderboard? Email Menglin (mj493 at cornell.edu) with your predictions files.
+						Our Fashionpedia API enables reading, and visualizing annotations, and evaluating results.
 					</p>
-
+					<p class="sample-text">
+						Also check out our two demos for more details.
+					</p>
+					<div class="button-group-area mt-10 mb-40">
+						<a href="https://github.com/KMnP/fashionpedia-api" class="genric-btn primary circle arrow e-large">Fashionpedia API<span class="lnr lnr-arrow-right"></span></a>
+						<a href="https://github.com/KMnP/fashionpedia-api/blob/master/fashionpedia_demo.ipynb" class="genric-btn primary circle arrow e-large">API demo<span class="lnr lnr-arrow-right"></span></a>
+						<a href="https://github.com/KMnP/fashionpedia-api/blob/master/eval_demo.ipynb" class="genric-btn primary circle arrow e-large">Eval demo<span class="lnr lnr-arrow-right"></span></a>
+					</div>
 				</div>
 			</section>
-<!--
-            <section class="sample-text-area">
+
+            <!-- Start baseline Area -->
+            <section class="event-details-area section-gap">
 				<div class="container">
-					<div class="section-top-border">
-						<h3 class="mb-30">Fashionpedia Leaderboard</h3>
-						<div class="progress-table-wrap">
-							<div class="progress-table">
-								<div class="table-head">
-									<div class="serial">#</div>
-									<div class="country">Countries</div>
-									<div class="visit">Visits</div>
-									<div class="percentage">Percentages</div>
-								</div>
-								<div class="table-row">
-									<div class="serial">01</div>
-									<div class="country"> <img src="img/elements/f1.jpg" alt="flag">Canada</div>
-									<div class="visit">645032</div>
-									<div class="percentage">
-										<div class="progress">
-											<div class="progress-bar color-1" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-									</div>
-								</div>
-								<div class="table-row">
-									<div class="serial">02</div>
-									<div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
-									<div class="visit">645032</div>
-									<div class="percentage">
-										<div class="progress">
-											<div class="progress-bar color-2" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-									</div>
-								</div>
+					<h2 class="text-heading">Attribute Mask R-CNN</h2>
+					<div class="row">
+						<div class="main-img">
+							<img class="img-fluid" src="img/baseline.png" alt="">
+						</div>
+						<div class="details-content">
+							<div class="button-group-area mt-10 mb-40">
+								<a href="https://github.com/KMnP/fashionpedia-api/blob/master/baseline_predictor_demo.ipynb" class="genric-btn info circle arrow e-large">Predictor demo<span class="lnr lnr-arrow-right"></span></a>
+		                        <a href="https://s3.amazonaws.com/ifashionist-dataset/attributes-maskrcnn/model.zip" class="genric-btn info circle arrow e-large">Model checkpoint<span class="lnr lnr-arrow-right"></span></a>
 							</div>
 						</div>
 					</div>
 				</div>
-			</section> -->
+			</section>
+			<!-- End baseline Area -->
 
 
 			<!-- start footer Area -->
