--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 				                    <li><b>Mengyun Shi</b> Cornell</li>
 				                    <li><b>Mikhail Sirotenko</b> Google</li>
 				                    <li><b>Yin Cui</b> Google</li>
-				                    <li><b>Cardie Claire</b> Cornell</li>
+				                    <li><b>Claire Cardie</b> Cornell</li>
 				                    <li><b>Hartwig Adam</b> Google</li>
 				                    <li><b>Bharath Hariharan</b> Cornell</li>
 				                    <li><b>Van Dyk Lewis</b> Cornell</li>
