use previous html names for consistency

--- a/Hearst_dataset.html
+++ b/Hearst_dataset.html
@@ -75,7 +75,7 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								Fashionpedia Terms of Use
+								Hearst Dataset
 							</h1>
 						</div>
 					</div>
@@ -83,44 +83,32 @@
 			</section>
 			<!-- End banner Area -->
 
-			<!-- Start Sample Area -->
-			<section class="sample-text-area">
+            <!-- Start data and ontology intro Area -->
+            <section class="event-details-area section-gap">
 				<div class="container">
-					<h2 class="text-heading">Annotations, ontology and websites</h2>
-					<p class="sample-text mb-40" >
-						The annotations in the Fashionpedia dataset along with the ontology, and the websites belong to the Fashionpadia and are licensed under a <u><a href="https://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution 4.0 License</a></u>.
-					</p>
-
-					<h2 class="text-heading mt-40">Software</h2>
-					<p class="sample-text mb-40">
-						Copyright (c) 2020, Fashionpedia Consortium. All rights reserved.
-Redistribution and use in source and binary forms, with or without
-modification, are permitted provided that the following conditions are met:</p>
-<p class="sample-text">
-1. Redistributions of source code must retain the above copyright notice, this
-   list of conditions and the following disclaimer.</p>
-2. Redistributions in binary form must reproduce the above copyright notice,
-   this list of conditions and the following disclaimer in the documentation
-   and/or other materials provided with the distribution.</p>
-<p class="sample-text">
-THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
-ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
-WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
-DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
-ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
-(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
-LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
-ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
-SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-					</p>
-
-					<h2 class="text-heading mt-40">Images</h2>
-					<p class="sample-text mb-40">
-						The Fashionpedia does not own the copyright of the images. Use of the images must abide by the Terms of use of  <u><a href="https://policies.oath.com/us/en/oath/terms/otos/index.html">Flickr</a></u>, <u><a href="https://unsplash.com/license">Unsplash</a></u>, <u><a href="https://burst.shopify.com/legal/terms">Burst by Shopify</a></u>, <u><a href="https://freestocks.org/terms-of-use/">Freestocks</a></u>, <u><a href="https://kaboompics.com/page/license-and-faq">Kaboompics</a></u>, and <u><a href="https://www.pexels.com/photo-license/">Pexels</a></u>. The users of the Fashionpedia accept full responsibility for the use of the Fashionpedia dataset, including but not limited to the use of any copies of copyrighted images that they may create from the Fashionpedia.</p>
+					<div class="row">
+						<div class="main-img">
+							<img class="img-fluid" src="img/idesigner.png" alt="">
+						</div>
+						<div class="details-content">
+							<a>
+								<h3 class="text-heading mt-40 mb-20">iDesigner - Hearst Magazine Media</h3>
+							</a>
+							<p class="sample-text mb-10">For iDesigner competition, we have sampled 50,000 runway images, spanning 50 fashion designers, from our large repository of proprietary, front row images from fashion shows over the past 15 years. The data includes a variety of fashion items: shoes, bags, dress, jackets etc. Each image in the training set has a single label, the designer's name, which you will try to predict for the test set.</p>
+                        	<p class="sample-text mb-10">The test set contains 5,000 similar images, of which ~30% will be used to generate the public leaderboard during the Kaggle competition.</p>
+                        	<p class="sample-text mb-40">For more details on iDesigner 2019 dataset & challenge, please see our <u><a href="https://www.kaggle.com/c/idesigner/overview">Kaggle</a></u>, <u><a href="https://github.com/hearstml/idesigner">Github</a></u>, and <u><a href="https://sites.google.com/view/fgvc6/home">FGVC 2019</a></u> page. The 2019 competition, sponsored by Hearst, is part of the FGVC6 workshop at CVPR.</p>
+						</div>
+						<div class="details-content">
+							<a>
+								<h3 class="text-heading mt-40 mb-20">About Hearst Magazine Medias</h3>
+							</a>
+							<p class="sample-text mb-10">Hearst Magazines Media, Inc. is the world's leading data-driven fashion media company. One of the largest publishers of monthly magazine media publishers, Hearst publishes 25 U.S. titles and over 300 international editions. Hearst's leadership in the fashion & luxury category is supported by brands such as Harper's BAZAAR, ELLE, Esquire and Marie Claire. Leveraging data from our 200M unique visitors, on-and-off site click stream data, and our brand advertising partners data, we're building a robust and disruptive capability to serve the fashion & luxury industry with insights to better build their businesses and grow market share.</p>
+						</div>
+					</div>
 				</div>
 			</section>
-			<!-- End Sample Area -->
+			<!-- End data and ontology intro Area -->
+
 
 			<!-- start footer Area -->
 			<footer class="footer-area section-gap">
