--- a/Kaggle-iMat-FGVC.html
+++ b/Kaggle-iMat-FGVC.html
@@ -41,9 +41,9 @@
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Home</a></li>
 			          <li><a href="papers.html">Papers</a></li>
-			          <li class="menu-has-children"><a href="data.html">Fashionpedia Dataset</a>
+			          <li class="menu-has-children"><a href="Fashionpedia_download.html">Fashionpedia Dataset</a>
 			            <ul>
-			              <li><a href="data.html">Overview</a></li>
+			              <li><a href="Fashionpedia_download.html">Overview</a></li>
 			              <li><a href="https://github.com/cvdfoundation/fashionpedia">Download</a></li>
 			              <li><a href="data_license.html">Terms of Use</a></li>
 			              <li><a href="data_acknowledgement.html">Acknowledgement</a></li>
@@ -53,12 +53,12 @@
 			          <li class="menu-has-children"><a href="research_leaderboard.html">Leaderboard</a>
 			            <ul>
 			              <li><a href="research_leaderboard.html">Leaderboard</a></li>
-			              <li><a href="kaggle_sites.html">iMat-Fashion (FGVC)</a></li>
+			              <li><a href="Kaggle-iMat-FGVC.html">iMat-Fashion (FGVC)</a></li>
 			            </ul>
 			          </li>
-			          <li class="menu-has-children"><a href="idesigner.html">Other Datasets</a>
+			          <li class="menu-has-children"><a href="Hearst_dataset.html">Other Datasets</a>
 			            <ul>
-			              <li><a href="idesigner.html">Hearst dataset</a></li>
+			              <li><a href="Hearst_dataset.html">Hearst dataset</a></li>
 			            </ul>
 			          </li>
 			          <li><a href="contact.html">Contact</a></li>
@@ -75,7 +75,7 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								Hearst Dataset
+								iMaterialist Fashion Kaggle Competition at FGVC
 							</h1>
 						</div>
 					</div>
@@ -83,31 +83,29 @@
 			</section>
 			<!-- End banner Area -->
 
-            <!-- Start data and ontology intro Area -->
-            <section class="event-details-area section-gap">
+            <section class="sample-text-area">
 				<div class="container">
-					<div class="row">
-						<div class="main-img">
-							<img class="img-fluid" src="img/idesigner.png" alt="">
-						</div>
-						<div class="details-content">
-							<a>
-								<h3 class="text-heading mt-40 mb-20">iDesigner - Hearst Magazine Media</h3>
-							</a>
-							<p class="sample-text mb-10">For iDesigner competition, we have sampled 50,000 runway images, spanning 50 fashion designers, from our large repository of proprietary, front row images from fashion shows over the past 15 years. The data includes a variety of fashion items: shoes, bags, dress, jackets etc. Each image in the training set has a single label, the designer's name, which you will try to predict for the test set.</p>
-                        	<p class="sample-text mb-10">The test set contains 5,000 similar images, of which ~30% will be used to generate the public leaderboard during the Kaggle competition.</p>
-                        	<p class="sample-text mb-40">For more details on iDesigner 2019 dataset & challenge, please see our <u><a href="https://www.kaggle.com/c/idesigner/overview">Kaggle</a></u>, <u><a href="https://github.com/hearstml/idesigner">Github</a></u>, and <u><a href="https://sites.google.com/view/fgvc6/home">FGVC 2019</a></u> page. The 2019 competition, sponsored by Hearst, is part of the FGVC6 workshop at CVPR.</p>
-						</div>
-						<div class="details-content">
-							<a>
-								<h3 class="text-heading mt-40 mb-20">About Hearst Magazine Medias</h3>
-							</a>
-							<p class="sample-text mb-10">Hearst Magazines Media, Inc. is the world's leading data-driven fashion media company. One of the largest publishers of monthly magazine media publishers, Hearst publishes 25 U.S. titles and over 300 international editions. Hearst's leadership in the fashion & luxury category is supported by brands such as Harper's BAZAAR, ELLE, Esquire and Marie Claire. Leveraging data from our 200M unique visitors, on-and-off site click stream data, and our brand advertising partners data, we're building a robust and disruptive capability to serve the fashion & luxury industry with insights to better build their businesses and grow market share.</p>
-						</div>
+					<h3 class="text-heading">Download</h3>
+					<p class="sample-text mb-40">
+						We have hosted Kaggle challenge (iMat-Fashion) using Fashionpedia dataset under FGVC (Fine-Grained Visual Categorization workshop) at CVPR in 2019 and 2020 respectively.
+					</p>
+
+					<h4 class="text-heading mt-35 mb-35">FGVC7, CVPR 2020</h4>
+
+					<div class="button-group-area mt-10 mb-40">
+						<a href="https://sites.google.com/view/fgvc7/competitions/imatfashion2020" class="genric-btn primary-border circle arrow">FGVC 7<span class="lnr lnr-arrow-right"></span></a>
+						<a href="https://www.kaggle.com/c/imaterialist-fashion-2020-fgvc7" class="genric-btn primary-border circle arrow">Kaggle site<span class="lnr lnr-arrow-right"></span></a>
+                        <a href="https://github.com/visipedia/imat_comp" class="genric-btn primary-border circle arrow">Github page<span class="lnr lnr-arrow-right"></span></a>
+					</div>
+
+					<h4 class="text-heading mb-35">FGVC6, CVPR 2019</h4>
+					<div class="button-group-area mt-10 mb-40">
+						<a href="https://sites.google.com/view/fgvc6/competitions/imat-fashion-2019" class="genric-btn primary-border circle arrow">FGVC 6<span class="lnr lnr-arrow-right"></span></a>
+						<a href="https://www.kaggle.com/c/imaterialist-fashion-2019-fgvc6" class="genric-btn primary-border circle arrow">Kaggle site<span class="lnr lnr-arrow-right"></span></a>
+                        <a href="https://github.com/visipedia/imat_comp/tree/master/2019" class="genric-btn primary-border circle arrow">Github page<span class="lnr lnr-arrow-right"></span></a>
 					</div>
 				</div>
 			</section>
-			<!-- End data and ontology intro Area -->
 
 
 			<!-- start footer Area -->
