--- a/kaggle_sites.html
+++ b/kaggle_sites.html
@@ -41,9 +41,9 @@
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Home</a></li>
 			          <li><a href="papers.html">Papers</a></li>
-			          <li class="menu-has-children"><a href="data.html">Fashionpedia Dataset</a>
+			          <li class="menu-has-children"><a href="Fashionpedia_download.html">Fashionpedia Dataset</a>
 			            <ul>
-			              <li><a href="data.html">Overview</a></li>
+			              <li><a href="Fashionpedia_download.html">Overview</a></li>
 			              <li><a href="https://github.com/cvdfoundation/fashionpedia">Download</a></li>
 			              <li><a href="data_license.html">Terms of Use</a></li>
 			              <li><a href="data_acknowledgement.html">Acknowledgement</a></li>
@@ -56,9 +56,9 @@
 			              <li><a href="kaggle_sites.html">iMat-Fashion (FGVC)</a></li>
 			            </ul>
 			          </li>
-			          <li class="menu-has-children"><a href="idesigner.html">Other Datasets</a>
+			          <li class="menu-has-children"><a href="Hearst_dataset.html">Other Datasets</a>
 			            <ul>
-			              <li><a href="idesigner.html">Hearst dataset</a></li>
+			              <li><a href="Hearst_dataset.html">Hearst dataset</a></li>
 			            </ul>
 			          </li>
 			          <li><a href="contact.html">Contact</a></li>
