bibtex, model links updated

--- a/Model_and_API.html
+++ b/Model_and_API.html
@@ -111,7 +111,7 @@
 						<div class="details-content">
 							<div class="button-group-area mt-10 mb-40">
 								<a href="https://github.com/KMnP/fashionpedia-api/blob/master/baseline_predictor_demo.ipynb" class="genric-btn info circle arrow e-large">Predictor demo<span class="lnr lnr-arrow-right"></span></a>
-		                        <a href="https://s3.amazonaws.com/ifashionist-dataset/attributes-maskrcnn/model.zip" class="genric-btn info circle arrow e-large">Model checkpoint<span class="lnr lnr-arrow-right"></span></a>
+		                        <a href="https://github.com/KMnP/fashionpedia-api#pretrained-models" class="genric-btn info circle arrow e-large">Model checkpoints<span class="lnr lnr-arrow-right"></span></a>
 							</div>
 						</div>
 					</div>
