--- a/papers.html
+++ b/papers.html
@@ -92,6 +92,7 @@
 								<img src="img/dataset/paper.png" alt="" class="img-fluid">
 							</div>
 							<div class="col-md-7 mt-sm-20 left-align-p">
+								<p><b>ECCV 2020 (<strong>oral</strong>)</b></p>
 								<p>Our paper includes the following details:</p>
 								<ul class="unordered-list">
 									<li>Introduction of a new task</li>
