training code and pretrained model link updated

--- a/Model_and_API.html
+++ b/Model_and_API.html
@@ -110,8 +110,9 @@
 						</div>
 						<div class="details-content">
 							<div class="button-group-area mt-10 mb-40">
-								<a href="https://github.com/KMnP/fashionpedia-api/blob/master/baseline_predictor_demo.ipynb" class="genric-btn info circle arrow e-large">Predictor demo<span class="lnr lnr-arrow-right"></span></a>
-		                        <a href="https://github.com/KMnP/fashionpedia-api#pretrained-models" class="genric-btn info circle arrow e-large">Model checkpoints<span class="lnr lnr-arrow-right"></span></a>
+								<a href="https://github.com/tensorflow/tpu/tree/master/models/official/detection/projects/fashionpedia" class="genric-btn info circle arrow e-large">Code (tensorflow)<span class="lnr lnr-arrow-right"></span></a>
+		                        <a href="https://github.com/tensorflow/tpu/tree/master/models/official/detection/projects/fashionpedia#checkpoint" class="genric-btn info circle arrow e-large">Pretrained model checkpoints<span class="lnr lnr-arrow-right"></span></a>
+		                        <a href="https://github.com/KMnP/fashionpedia-api/blob/master/baseline_predictor_demo.ipynb" class="genric-btn info circle arrow e-large">Predictor demo<span class="lnr lnr-arrow-right"></span></a>
 							</div>
 						</div>
 					</div>
