--- a/index.html
+++ b/index.html
@@ -238,6 +238,20 @@
   booktitle={European Conference on Computer Vision (ECCV)},
   year={2020}
 }
+
+@article{shi2023fashionpedia-taste,
+  title={Fashionpeida-Taste: A Dataset towards Explaining Human Fashion Taste},
+  author={Shi, Mengyun and Belongie, Serge and Cardie, Claire},
+  journal={arXiv preprint arXiv:1810.04805},
+  year={2023}
+}
+
+@article{shi2023fashionpedia-ads,
+  title={Fashionpeida-Ads: Does your Favorite Advertisement Tell your Fashion Taste?},
+  author={Shi, Mengyun and Belongie, Serge and Cardie, Claire},
+  journal={arXiv preprint arXiv:1810.04805},
+  year={2023}
+}
 	</code></pre>
 								</blockquote>
 							</div>
