--- a/index.html
+++ b/index.html
@@ -243,14 +243,14 @@
 @article{shi2023fashionpedia-taste,
   title={Fashionpeida-Taste: A Dataset towards Explaining Human Fashion Taste},
   author={Shi, Mengyun and Belongie, Serge and Cardie, Claire},
-  journal={arXiv preprint arXiv:1810.04805},
+  journal={arXiv preprint arXiv:},
   year={2023}
 }
 
 @article{shi2023fashionpedia-ads,
   title={Fashionpeida-Ads: Does your Favorite Advertisement Tell your Fashion Taste?},
-  author={Shi, Mengyun and Belongie, Serge and Cardie, Claire},
-  journal={arXiv preprint arXiv:1810.04805},
+  author={Shi, Mengyun and Cardie, Claire and Belongie, Serge},
+  journal={arXiv preprint arXiv:},
   year={2023}
 }
 	</code></pre>
