--- a/papers.html
+++ b/papers.html
@@ -83,6 +83,8 @@
 			</section>
 			<!-- End banner Area -->
 
+		
+		
 			<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
@@ -112,6 +114,67 @@
 				</div>
 			</div>
 
+
+		
+			<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h3 class="mb-30">Fashionpeida-Taste: A Dataset towards Explaining Human Fashion Taste</h3>
+						<div class="row">
+							<div class="col-md-4">
+								<img src="img/dataset/paper.png" alt="" class="img-fluid">
+							</div>
+							<div class="col-md-7 mt-sm-20 left-align-p">
+								<p><b>arXiv preprint 2023</b></p>
+								<p>Our paper includes the following details:</p>
+								<ul class="unordered-list">
+									<li>Introduction of a new task</li>
+									<li>Comparison with existing fashion dataset</li>
+									<li>Dataset creation details</li>
+									<li>Image collections and annotation pipelines</li>
+									<li>Dataset analysis</li>
+								</ul>
+								<div class="button-group-area mt-30 mb-40">
+									<a href="https://arxiv.org/abs/2004.12276" class="genric-btn primary circle arrow">Link to paper<span class="lnr lnr-arrow-right"></span></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		
+		
+		
+			<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h3 class="mb-30">Fashionpeida-Ads: Does your Favorite Advertisement Tell your Fashion Taste?</h3>
+						<div class="row">
+							<div class="col-md-4">
+								<img src="img/dataset/paper.png" alt="" class="img-fluid">
+							</div>
+							<div class="col-md-7 mt-sm-20 left-align-p">
+								<p><b>arXiv preprint 2023</b></p>
+								<p>Our paper includes the following details:</p>
+								<ul class="unordered-list">
+									<li>Introduction of a new task</li>
+									<li>Comparison with existing fashion dataset</li>
+									<li>Dataset creation details</li>
+									<li>Image collections and annotation pipelines</li>
+									<li>Dataset analysis</li>
+								</ul>
+								<div class="button-group-area mt-30 mb-40">
+									<a href="https://arxiv.org/abs/2004.12276" class="genric-btn primary circle arrow">Link to paper<span class="lnr lnr-arrow-right"></span></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		
+		
+		
             <!-- Start others Area -->
             <section class="event-details-area section-gap">
 				<div class="container">
