--- a/papers.html
+++ b/papers.html
@@ -125,7 +125,7 @@
 								<img src="img/dataset/paper.png" alt="" class="img-fluid">
 							</div>
 							<div class="col-md-7 mt-sm-20 left-align-p">
-								<p><b>arXiv preprint 2023</b></p>
+								<p><b>ArXiv 2023</b></p>
 								<p>Our paper includes the following details:</p>
 								<ul class="unordered-list">
 									<li>Introduction of a new task</li>
@@ -154,7 +154,7 @@
 								<img src="img/dataset/paper.png" alt="" class="img-fluid">
 							</div>
 							<div class="col-md-7 mt-sm-20 left-align-p">
-								<p><b>arXiv preprint 2023</b></p>
+								<p><b>ArXiv 2023</b></p>
 								<p>Our paper includes the following details:</p>
 								<ul class="unordered-list">
 									<li>Introduction of a new task</li>
