--- a/index.html
+++ b/index.html
@@ -168,14 +168,11 @@
 							<p class="meta"></p>
 							<a>
 								<h5>Paper</h5>
-								<p>Our paper includes the following details:</p>
-								<li>Introduction of a new task</li>
-								<li>Comparison with existing fashion dataset</li>
-								<li>Fashionpedia ontology specification</li>
-								<li>Dataset creation details</li>
-								<li>Image collections and annotation pipelines</li>
-								<li>Dataset analysis</li>
-								<li>Evaluation protocol and baseline model (Attribute-Mask RCNN)</li>
+								<p>Our papers include:</p>
+								<li>Fashionpedia dataset</li>
+								<li>Fashionpedia-Taste dataset</li>
+								<li>Fashionpedia-Ads dataset</li>
+
 							</a>
                         <a href="papers.html" class="details-btn d-flex justify-content-center align-items-center"><span class="details">Details</span><span class="lnr lnr-arrow-right"></span></a>
 						</div>
@@ -243,14 +240,14 @@
 @article{shi2023fashionpedia-taste,
   title={Fashionpeida-Taste: A Dataset towards Explaining Human Fashion Taste},
   author={Shi, Mengyun and Belongie, Serge and Cardie, Claire},
-  journal={arXiv preprint arXiv:},
+  journal={arXiv preprint arXiv:2305.02307},
   year={2023}
 }
 
 @article{shi2023fashionpedia-ads,
   title={Fashionpeida-Ads: Does your Favorite Advertisement Tell your Fashion Taste?},
   author={Shi, Mengyun and Cardie, Claire and Belongie, Serge},
-  journal={arXiv preprint arXiv:},
+  journal={arXiv preprint arXiv:2305.02360},
   year={2023}
 }
 	</code></pre>
