--- a/papers.html
+++ b/papers.html
@@ -122,7 +122,7 @@
 						<h3 class="mb-30">Fashionpeida-Taste: A Dataset towards Explaining Human Fashion Taste</h3>
 						<div class="row">
 							<div class="col-md-4">
-								<img src="img/dataset/paper.png" alt="" class="img-fluid">
+								<img src="img/dataset/paper2.png" alt="" class="img-fluid">
 							</div>
 							<div class="col-md-7 mt-sm-20 left-align-p">
 								<p><b>ArXiv 2023</b></p>
@@ -135,7 +135,7 @@
 									<li>Dataset analysis</li>
 								</ul>
 								<div class="button-group-area mt-30 mb-40">
-									<a href="https://arxiv.org/abs/2004.12276" class="genric-btn primary circle arrow">Link to paper<span class="lnr lnr-arrow-right"></span></a>
+									<a href="https://arxiv.org/abs/2305.02307" class="genric-btn primary circle arrow">Link to paper<span class="lnr lnr-arrow-right"></span></a>
 								</div>
 							</div>
 						</div>
@@ -151,7 +151,7 @@
 						<h3 class="mb-30">Fashionpeida-Ads: Does your Favorite Advertisement Tell your Fashion Taste?</h3>
 						<div class="row">
 							<div class="col-md-4">
-								<img src="img/dataset/paper.png" alt="" class="img-fluid">
+								<img src="img/dataset/paper3.png" alt="" class="img-fluid">
 							</div>
 							<div class="col-md-7 mt-sm-20 left-align-p">
 								<p><b>ArXiv 2023</b></p>
@@ -164,7 +164,7 @@
 									<li>Dataset analysis</li>
 								</ul>
 								<div class="button-group-area mt-30 mb-40">
-									<a href="https://arxiv.org/abs/2004.12276" class="genric-btn primary circle arrow">Link to paper<span class="lnr lnr-arrow-right"></span></a>
+									<a href="https://arxiv.org/abs/2305.02360" class="genric-btn primary circle arrow">Link to paper<span class="lnr lnr-arrow-right"></span></a>
 								</div>
 							</div>
 						</div>
