--- a/index.html
+++ b/index.html
@@ -238,14 +238,14 @@
 }
 
 @article{shi2023fashionpedia-taste,
-  title={Fashionpeida-Taste: A Dataset towards Explaining Human Fashion Taste},
+  title={Fashionpedia-Taste: A Dataset towards Explaining Human Fashion Taste},
   author={Shi, Mengyun and Belongie, Serge and Cardie, Claire},
   journal={arXiv preprint arXiv:2305.02307},
   year={2023}
 }
 
 @article{shi2023fashionpedia-ads,
-  title={Fashionpeida-Ads: Does your Favorite Advertisement Tell your Fashion Taste?},
+  title={Fashionpedia-Ads: Does your Favorite Advertisement Tell your Fashion Taste?},
   author={Shi, Mengyun and Cardie, Claire and Belongie, Serge},
   journal={arXiv preprint arXiv:2305.02360},
   year={2023}
