--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 							</a></div>
 							<p class="meta"></p>
 							<a>
-								<h5>Paper</h5>
+								<h5>Papers</h5>
 								<p>Our papers include:</p>
 								<li>Fashionpedia dataset</li>
 								<li>Fashionpedia-Taste dataset</li>
