--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 }
 
 @article{shi2023fashionpedia-ads,
-  title={Fashionpedia-Ads: Does your Favorite Advertisement Tell your Fashion Taste?},
+  title={Fashionpedia-Ads: Do Your Favorite Advertisements Reveal Your Fashion Taste?},
   author={Shi, Mengyun and Cardie, Claire and Belongie, Serge},
   journal={arXiv preprint arXiv:2305.02360},
   year={2023}
