--- a/papers.html
+++ b/papers.html
@@ -148,7 +148,7 @@
 			<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h3 class="mb-30">Fashionpedia-Ads: Does your Favorite Advertisement Tell your Fashion Taste?</h3>
+						<h3 class="mb-30">Fashionpedia-Ads: Do Your Favorite Advertisements Reveal Your Fashion Taste?</h3>
 						<div class="row">
 							<div class="col-md-4">
 								<img src="img/dataset/paper3.png" alt="" class="img-fluid">
